--- a/.gitignore
+++ b/.gitignore
@@ -424,3 +424,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,macos,windows,python,django,flask
+
+lost+found/
+db/volumes/
+volumes/
+model/
+docker.tar.gz
